--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
   compileSdkVersion 26
   buildToolsVersion '26.0.2'
   defaultConfig {
+    buildConfigField "String", "API_KEY", "\"${API_KEY}\""
     applicationId "com.framgia.music"
     minSdkVersion 14
     targetSdkVersion 26
